# Spigot-Server

./: CMakeLists.txt  CMakeSettings.json  LICENCE Spigot  README.md  StdOutRedirect.h  exports.cpp  exports.h  main.cpp
MultiWrapper/: SpgtInstance.cpp  SpgtInstance.h  exports.cpp  exports.h
